--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -18,3 +18,8 @@ body {
     align-content: space-around;
     justify-items: center;
 }
+
+$color-gray-one: #666666;
+$color-gray-two: #B3B3B3;
+
+@import './searchBar';
