--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -12,11 +12,11 @@ body {
 }
 
 .home {
-    height: calc(100vh - 33px);
-    width: 86vw;
+    height: calc(100vh - 16px);
+    width: 66vw;
     display: grid;
     align-content: space-around;
-    justify-items: stretch;
+    //justify-items: stretch;
 }
 
 .logo-main,
@@ -25,7 +25,15 @@ body {
     justify-items: center;
 }
 
+ul {
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+}
+
 $color-gray-one: #666666;
 $color-gray-two: #B3B3B3;
+$color-blue-one: #0079FF;
 
 @import './searchBar';
+@import './recentResults';
