--- a/src/style/results.scss
+++ b/src/style/results.scss
@@ -1,3 +1,45 @@
 .results {
-    @include default-page-layout();
+    // @include default-page-layout();
+    height: calc(100vh - 16px);
+    width: 66vw;
+    display: grid;
+    margin-top: 52px;
+    grid-row-gap: 44px;
+}
+
+.results-results {
+    display: grid;
+    grid-row-gap: 21px;
+
+    .results-results__wrapper {
+
+        .results-results__results {
+            display: grid;
+            grid-row-gap: 20px;
+            justify-content: stretch;
+        }
+    }
+}
+
+.result-result {
+    display: grid;
+    align-content: space-around;
+    grid-row-gap: 22px;
+
+    .result-result__species > * {
+        color: $color-blue-one;
+        font-size: 14px;
+        line-height: 17px;
+        font-weight: normal;
+    }
+
+    .result-result__name a {
+        color: $color-gray-one;
+        font-size: 18px;
+        line-height: 22px;
+    }
+
+    .result-result__starships {
+
+    }
 }
